--- a/css/apple.css
+++ b/css/apple.css
@@ -60,12 +60,13 @@ i{
 .lis{
 	width: 100%;
 	height: 100%;
-	background: #fff;
+	background: #333;
 	position: fixed;
 	top: 44px;
 	left:0;
 	display: none;
 	z-index: 999;
+	color: #fff;
 }
 
 .lis .nei{
@@ -186,7 +187,7 @@ i{
 	height: 575px;
 	border: 14px solid #fff;
 	box-sizing: border-box;
-	background: red;
+	/*background: red;*/
 	float: left;
 }
 .mid ul li:nth-child(1){
@@ -351,7 +352,7 @@ footer .container{
 	/* background-color: #777; */
 }
 footer{
-	height: 480px;
+	/*height: 480px;*/
 	background-color: #F2F2F2;
 }
 footer .container{
@@ -460,7 +461,7 @@ footer .container .end .ending{
     	padding-right: 18px;
     }
     .iphoneX{
-		background-size: contain;
+		background-size: center;
 		background-position: bottom;
 
     	background-image: url('../IMG/iphone_x_medium_2x.jpg');
@@ -538,11 +539,14 @@ footer .container .end .ending{
     	background-size: cover;
     	background-image: url('../img/macbook_pro_performance_small.jpg');
     }
+	.mid ul li{
+		border:none;
+	}
     .mid ul li:nth-child(1){
 	    width: 100%;
 	    background-image: url('https://www.apple.com/cn/home/images/promos/shop_for_college_medium.jpg');
 		background-repeat: no-repeat;
-		background-size:contain;
+		background-size:cover;
 		background-color: #FAFAFA;
 		background-position: center;
     }
@@ -551,7 +555,9 @@ footer .container .end .ending{
         width: 100%;
         background-image: url('https://www.apple.com/v/home/ds/images/promos/behind_the_mac_peter_medium.jpg');
 		background-size: cover;
-    }
+		background-position: center;
+
+	}
     .mid ul li:nth-child(3){
         width: 100%;
         background-image: url('https://www.apple.com/cn/home/images/promos/iphone_x_a11_medium.jpg');
@@ -566,6 +572,7 @@ footer .container .end .ending{
     }
     .mid ul li:nth-child(6){
 	    width: 100%;
+		margin-bottom: 20px;
 	    background-image: url('https://www.apple.com/cn/home/images/promos/three_rings_medium.jpg');
     }
     .mid ul li{
@@ -593,6 +600,11 @@ footer .container .end .ending{
 		text-align: center;
 		font-size: 12px;
 		color: #858585;
+	}
+	.shop  i{
+		font-weight: bold;
+		color:  #0A75CB;
+		margin-right: 5px;
 	}
 	.shop .sec{
 		width: 100%;
@@ -851,7 +863,7 @@ footer .container .end .ending{
 		height: 40px;
 		border-radius: 5px;
 		border:none;
-		background: #858585;
+		background: #282828;
 		padding:0 20px
 	}
 	.lis .inp input::placeholder{
